一通りBootstrapのscssを書いた

--- a/app/views/bootstrap_page/index.html.erb
+++ b/app/views/bootstrap_page/index.html.erb
@@ -1,5 +1,7 @@
 <%= render 'header' %>
-<%= render 'action' %>
-<%= render 'feature' %>
-<%= render 'contact' %>
+<div class="home-page">
+  <%= render 'action' %>
+  <%= render 'feature' %>
+  <%= render 'contact' %>
+</div>
 <%= render 'footer' %>
