--- a/app/views/bootstrap_page/_contact.html.erb
+++ b/app/views/bootstrap_page/_contact.html.erb
@@ -1,11 +1,75 @@
-<section class="fdb-block bg-dark" style="background-image: url(https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//hero/blue.svg);" data-block-type="contacts" data-id="5" draggable="true">
+<section class="section-contact bg-dark" style="background-image: url(https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//hero/blue.svg);" data-block-type="contacts" data-id="5" draggable="true">
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-12 col-md-8 col-lg-7" style="z-index: 10000;"><h1>Contact Us</h1><h2>We love to hear from you!</h2></div>
     </div>
 
     <div class="row pt-4">
-      <div class="col-12" style="z-index: 10000;"><form><div class="row"><div class="col-12 col-md fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><input type="text" class="form-control" placeholder="Name" value=""></p></div></div></div><div class="col-12 col-md mt-4 mt-md-0 fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><input type="text" class="form-control" placeholder="Email" value=""></p></div></div></div><div class="col-12 col-md mt-4 mt-md-0 fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><input type="text" class="form-control" placeholder="Phone (optional)" value=""></p></div></div></div></div><div class="row mt-4"><div class="col fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><input type="email" class="form-control" placeholder="Subject" value=""></p></div></div></div></div><div class="row mt-4"><div class="col fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><textarea class="form-control" name="message" rows="3" placeholder="How can we help?" value=""></textarea></p></div></div></div></div><div class="row mt-4"><div class="col text-center fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><button class="btn btn-dark" type="submit">Submit</button></p></div></div></div></div></form></div>
+      <div class="col-12" style="z-index: 10000;">
+        <form><div class="row">
+          <div class="col-12 col-md fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <input type="text" class="form-control" placeholder="Name" value="">
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md mt-4 mt-md-0 fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <input type="text" class="form-control" placeholder="Email" value="">
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md mt-4 mt-md-0 fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <input type="text" class="form-control" placeholder="Phone (optional)" value="">
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="row mt-4">
+            <div class="col fr-box" role="application" style="z-index: 10000;">
+              <div class="fr-wrapper" dir="auto">
+                <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                  <p>
+                    <input type="email" class="form-control" placeholder="Subject" value="">
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col fr-box" role="application" style="z-index: 10000;">
+              <div class="fr-wrapper" dir="auto">
+                <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                  <p>
+                    <textarea class="form-control" name="message" rows="3" placeholder="How can we help?" value=""></textarea>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col text-center fr-box" role="application" style="z-index: 10000;">
+              <div class="fr-wrapper" dir="auto">
+                <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                  <p>
+                    <button class="btn btn-dark" type="submit">Submit</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </section>
