--- a/app/views/bootstrap_page/_feature.html.erb
+++ b/app/views/bootstrap_page/_feature.html.erb
@@ -1,11 +1,54 @@
-<section class="fdb-block" data-block-type="features" data-id="4" draggable="true">
+<section class="section-feature" data-block-type="features" data-id="4" draggable="true">
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-10 col-lg-8 text-left" style="z-index: 10000;"><h1>Froala Design Blocks is simply ahead the word mountains</h1><p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p><p class="lead"><a href="https://www.froala.com">Explore all features <!-- <i class="fas fa-angle-right"></i> --></a></p></div>
     </div>
 
     <div class="row text-center no-gutters pt-5">
-      <div class="col-12 col-md-10 col-lg-8" style="z-index: 10000;"><div class="row"><div class="col-8 col-sm-5 col-md-2 m-auto fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/github.svg"></p><h4>Feature One</h4></div></div></div><div class="col-8 col-sm-5 col-md-2 m-auto pt-5 pt-sm-0 fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/monitor.svg"></p><h4>Feature Two</h4></div></div></div><div class="col-8 col-sm-5 col-md-2 m-auto pt-5 pt-md-0 fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/layers.svg"></p><h4>Feature Three</h4></div></div></div><div class="col-8 col-sm-5 col-md-2 m-auto pt-5 pt-md-0 fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true"><p><img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/cloud.svg"></p><h4>Feature Four</h4></div></div></div></div></div>
+      <div class="col-12 col-md-10 col-lg-8" style="z-index: 10000;">
+        <div class="row">
+          <div class="col-8 col-sm-5 col-md-2 m-auto fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/github.svg">
+                </p>
+                <h4>Feature One</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-8 col-sm-5 col-md-2 m-auto pt-5 pt-sm-0 fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/monitor.svg">
+                </p>
+                <h4>Feature Two</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-8 col-sm-5 col-md-2 m-auto pt-5 pt-md-0 fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/layers.svg">
+                </p>
+                <h4>Feature Three</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-8 col-sm-5 col-md-2 m-auto pt-5 pt-md-0 fr-box" role="application" style="z-index: 10000;">
+            <div class="fr-wrapper" dir="auto">
+              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
+                <p>
+                  <img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/cloud.svg">
+                </p>
+                <h4>Feature Four</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
