--- a/app/javascript/src/scss/tailwind_page.scss
+++ b/app/javascript/src/scss/tailwind_page.scss
@@ -1,3 +1,3 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tw_custom/base/main';
+@import 'tw_custom/components/main';
+@import 'tw_custom/utilities/main';
