--- a/app/views/tailwind_page/_contact.html.erb
+++ b/app/views/tailwind_page/_contact.html.erb
@@ -1,72 +1,44 @@
-<section class="section-contact bg-dark" style="background-image: url(https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//hero/blue.svg);" data-block-type="contacts" data-id="5" draggable="true">
-  <div class="container">
-    <div class="row text-center justify-content-center">
-      <div class="col-12 col-md-8 col-lg-7" style="z-index: 10000;"><h1>Contact Us</h1><h2>We love to hear from you!</h2></div>
+<section class="bg-cover" style="background-image: url(https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//hero/blue.svg);">
+  <div class="py-32 max-w-6xl mx-auto">
+    <div class="text-center text-gray-100">
+      <div class="" style="z-index: 10000;">
+        <h1 class="text-5xl font-semibold">Contact Us</h1>
+        <h2 class="text-4xl font-semibold">We love to hear from you!</h2>
+      </div>
     </div>
 
-    <div class="row pt-4">
-      <div class="col-12" style="z-index: 10000;">
-        <form><div class="row">
-          <div class="col-12 col-md fr-box" role="application" style="z-index: 10000;">
-            <div class="fr-wrapper" dir="auto">
-              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
-                <p>
-                  <input type="text" class="form-control" placeholder="Name" value="">
-                </p>
-              </div>
-            </div>
+    <div class="mt-6">
+      <div class="">
+        <form class="flex flex-wrap justify-between">
+          <div class="sm:w-1/3 w-full">
+            <p class="px-4">
+              <input class="w-full form-input" type="text" placeholder="Name" value="">
+            </p>
           </div>
-          <div class="col-12 col-md mt-4 mt-md-0 fr-box" role="application" style="z-index: 10000;">
-            <div class="fr-wrapper" dir="auto">
-              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
-                <p>
-                  <input type="text" class="form-control" placeholder="Email" value="">
-                </p>
-              </div>
-            </div>
+          <div class="sm:w-1/3 w-full sm:mt-0 mt-10">
+            <p class="px-4">
+              <input class="w-full form-input" type="email" placeholder="Email" value="">
+            </p>
           </div>
-          <div class="col-12 col-md mt-4 mt-md-0 fr-box" role="application" style="z-index: 10000;">
-            <div class="fr-wrapper" dir="auto">
-              <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
-                <p>
-                  <input type="text" class="form-control" placeholder="Phone (optional)" value="">
-                </p>
-              </div>
-            </div>
+          <div class="sm:w-1/3 w-full sm:mt-0 mt-10">
+            <p class="px-4">
+              <input class="w-full form-input" type="tel" placeholder="Phone (optional)" value="">
+            </p>
           </div>
-        </div>
-          <div class="row mt-4">
-            <div class="col fr-box" role="application" style="z-index: 10000;">
-              <div class="fr-wrapper" dir="auto">
-                <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
-                  <p>
-                    <input type="email" class="form-control" placeholder="Subject" value="">
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="w-full mt-10">
+            <p class="px-4">
+              <input class="w-full form-input" type="email" placeholder="Subject" value="">
+            </p>
           </div>
-          <div class="row mt-4">
-            <div class="col fr-box" role="application" style="z-index: 10000;">
-              <div class="fr-wrapper" dir="auto">
-                <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
-                  <p>
-                    <textarea class="form-control" name="message" rows="3" placeholder="How can we help?" value=""></textarea>
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="w-full mt-10">
+            <p class="px-4">
+              <textarea class="w-full form-textarea" placeholder="How can we help?" value=""></textarea>
+            </p>
           </div>
-          <div class="row mt-4">
-            <div class="col text-center fr-box" role="application" style="z-index: 10000;">
-              <div class="fr-wrapper" dir="auto">
-                <div aria-disabled="false" class="fr-element fr-view" contenteditable="true" dir="auto" spellcheck="true">
-                  <p>
-                    <button class="btn btn-dark" type="submit">Submit</button>
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div aria-disabled="false" class="w-full mt-10">
+            <p class="text-center">
+              <button class="btn btn-dark" type="submit">Submit</button>
+            </p>
           </div>
         </form>
       </div>
