--- a/app/views/tailwind_page/_action.html.erb
+++ b/app/views/tailwind_page/_action.html.erb
@@ -1,14 +1,10 @@
-<section class="section-action" data-block-type="call_to_action" data-id="3" draggable="true">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-8 text-center" style="z-index: 10000;">
-        <p class="lead">
-          "Separated they live in Bookmarksgrove right at the coast of the Semantics, far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast."
-        </p>
-        <p class="mt-5 mt-sm-4">
-          <a class="btn btn-primary" href="https://www.froala.com">Download</a>
-        </p>
-      </div>
-    </div>
+<section class="py-32" data-block-type="call_to_action" data-id="3">
+  <div class="mx-auto max-w-3xl text-center text-gray-600">
+    <p class="text-2xl font-normal">
+      "Separated they live in Bookmarksgrove right at the coast of the Semantics, far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast."
+    </p>
+    <p class="mt-6 sm:mt-4">
+      <a class="inline-block btn btn-primary" href="https://www.froala.com">Download</a>
+    </p>
   </div>
 </section>
