--- a/app/views/tailwind_page/_footer.html.erb
+++ b/app/views/tailwind_page/_footer.html.erb
@@ -1,7 +1,3 @@
-<footer class="footer-small fp-active" data-block-type="footers" data-id="6">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col fr-box" role="application" style="z-index: 10000;"><div class="fr-wrapper" dir="auto"><div class="fr-element fr-view" dir="auto" contenteditable="true" aria-disabled="false" spellcheck="true"><p>© 2018 Froala. All Rights Reserved</p></div></div></div>
-    </div>
-  </div>
+<footer class="h-20 flex justify-center items-center">
+  <p class="text-gray-500">© 2018 Froala. All Rights Reserved</p>
 </footer>
