--- a/app/views/tailwind_page/_header.html.erb
+++ b/app/views/tailwind_page/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="max-w-5xl mx-auto my-4">
+<header class="max-w-6xl mx-auto my-4">
   <nav class="flex flex-row items-center">
     <a class="inline-block" style="width: 102px; height: 30px;" href="https://www.froala.com">
       <img src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//logo.png" alt="image">
@@ -7,17 +7,17 @@
     <div class="hidden lg:inline-block w-full pl-4">
       <div class="flex flex-row justify-between items-center">
         <div class="inline-block">
-          <a class="link-black link-active px-2" href="https://www.froala.com" contenteditable="true">Home <span class="sr-only">(current)</span></a>
-          <a class="link-black px-2" href="https://www.froala.com" contenteditable="true">Features</a>
-          <a class="link-black px-2" href="https://www.froala.com" contenteditable="true">Pricing</a>
-          <a class="link-black" href="https://www.froala.com" contenteditable="true">Team</a>
+          <a class="link-black link-active px-2" href="https://www.froala.com">Home <span class="sr-only">(current)</span></a>
+          <a class="link-black px-2" href="https://www.froala.com">Features</a>
+          <a class="link-black px-2" href="https://www.froala.com">Pricing</a>
+          <a class="link-black" href="https://www.froala.com">Team</a>
         </div>
 
         <div class="inline-block">
-          <a class="link-black px-2" href="https://www.froala.com" contenteditable="true">Docs</a>
-          <a class="link-black px-2" href="https://www.froala.com" contenteditable="true">Contact</a>
-          <a class="link-black px-2" href="https://www.froala.com" contenteditable="true">Log In</a>
-          <a class="btn btn-primary ml-4" href="https://www.froala.com" contenteditable="true">Button</a>
+          <a class="link-black px-2" href="https://www.froala.com">Docs</a>
+          <a class="link-black px-2" href="https://www.froala.com">Contact</a>
+          <a class="link-black px-2" href="https://www.froala.com">Log In</a>
+          <a class="btn btn-primary ml-4" href="https://www.froala.com">Button</a>
         </div>
       </div>
     </div>
