ちょっと修正

--- a/app/views/tailwind_page/_header.html.erb
+++ b/app/views/tailwind_page/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="max-w-6xl mx-auto my-4">
   <nav class="flex flex-row items-center">
-    <a class="inline-block" style="width: 102px; height: 30px;" href="https://www.froala.com">
-      <img src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//logo.png" alt="image">
+    <a class="inline-block" href="https://www.froala.com">
+      <img src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//logo.png" width="102" height="30" alt="image">
     </a>
 
     <div class="hidden lg:inline-block w-full pl-4">
